--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <body>
     <div class="top">
         <h1>I'm Tushar</h1>
-        <img class="top_cloud" src="images/cloud.png" alt="">
+        <img class="top_cloud" src="Images/cloud.png" alt="">
         <h3>A Engineering Student</h3>
-        <img class="bot_cloud" src="images/cloud.png" alt="">
-        <img  class="backgroundimae" src="images/land.svg" alt="">
+        <img class="bot_cloud" src="Images/cloud.png" alt="">
+        <img  class="backgroundimae" src="Images/land.svg" alt="">
     </div>
     <div class="middle-container">
         <div class="profile">
