--- a/index.html
+++ b/index.html
@@ -21,28 +21,26 @@
         <img class="top_cloud" src="Images/cloud.png" alt="">
         <h3>A Engineering Student</h3>
         <img class="bot_cloud" src="Images/cloud.png" alt="">
-        <img  class="backgroundimae" src="Images/land.svg" alt="">
+        <img class="backgroundimae" src="Images/land.svg" alt="">
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img id="pro" src="Images/tarun1.jpg" alt="">
+            <img id="pro" src="Images/me.svg" alt="">
             <h2>Hello.</h2>
-            <p>"I'm a Engineering Student. <br>
-                I have a passion for web design and love to <br>
-                create  websites.""
+            <p class="intro">"I'm a Engineering Student.I have a passion for web design and love to create websites.""
             </p>
         </div>
         <hr>
         <div class="skills">
-            <h2>My Skills.</h2>
+            <h3>My Skills.</h3>
             <div class="skill-row">
                 <img class="cre" src="Images/web-development.png" alt="">
-                <h3>web development</h3>
+                <h2>web development</h2>
                 <p>Frontend web programer.My goals are to focus on typography, content and conveying the message that you want to send.</p>
             </div>
             <div class="skill-row">
-                <img class="cre" src="Images/design-thinking.png" alt="">
-                <h3>Creative thinking</h3>
+                <img class="crea" src="Images/design-thinking.png" alt="">
+                <h2>Creative thinking</h2>
                 <p>“Start where you are. Use what you have. Do what you can.”</p>
             </div>
         </div>
@@ -50,7 +48,8 @@
         <div class="contact-me">
             <h2>Get In Touch</h2>
             <h3>I’m currently available for work.</h3>
-            <p>If you have a project that you want to get started, think you need my help <br> with something or just fancy saying hey, then get in touch.</p>
+            <p class="contact-msg">If you have a project that you want to get started, think you need my help with something or just
+                fancy saying hey, then get in touch.</p>
             <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
         </div>
     </div>
@@ -59,8 +58,8 @@
     <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/tushar-sharma-a03151177/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/Tushar171977">Twitter</a>
-        <a class="footer-link" href="https://www.instagram.com/t.a.r.u.n.01/">instagram</a>
-        <p>© Tushar Sharma.</p>
+        <a class="footer-link" href="https://www.instagram.com/t.a.r.u.n.01/">Instagram</a>
+        <p class="copy">© Tushar Sharma.</p>
     </div>
 
 </body>
